--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -11,9 +11,9 @@
       apt: update_cache=yes cache_valid_time=3600
       become: yes
 
-  # roles:
-  #   - geerlingguy.ntp
-  #   - role: geerlingguy.docker
+  roles:
+    - geerlingguy.ntp
+    - role: geerlingguy.docker
 
   tasks:
     - import_tasks: init-setup.yml
