--- a/clickhouse/docker-compose.yml
+++ b/clickhouse/docker-compose.yml
@@ -2,13 +2,13 @@ version: '3'
 services:
   ch-server:
     hostname: ch-server
-    image: 'yandex/clickhouse-server'
+    image: 'yandex/clickhouse-server:19.16.13.54'
     container_name: ch-server
     ports:
       - '8123:8123'
       - '9000:9000'
     volumes: 
-      - './clickhouse-data:/var/lib/clickhouse'
+      - '/home/vagrant/clickhouse-data:/var/lib/clickhouse'
     ulimits:
       nofile:
         soft: 262144
