--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -1,4 +1,7 @@
 ---
-  - src: geerlingguy.ntp
+roles:
+  - name: geerlingguy.ntp
+    version: 2.0.0
 
-  - src: geerlingguy.docker
+  - name: geerlingguy.docker
+    version: 2.7.0
