update to ubuntu 20.04

--- a/ansible/clickhouse-setup.yml
+++ b/ansible/clickhouse-setup.yml
@@ -5,12 +5,11 @@
     id: E0C56BD4
 
 - apt_repository:
-    repo: "deb http://repo.yandex.ru/clickhouse/deb/stable/ main/"
+    repo: "deb https://repo.clickhouse.tech/deb/stable/ main/"
     state: present
 
 - name: install clickhouse-client
   apt: name="clickhouse-client" state=present
 
-# - name: install clickhouse-server
-#   apt: name="clickhouse-server" state=present
-
+- name: install clickhouse-server
+  apt: name="clickhouse-server" state=present
