add cli tools setup

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -17,7 +17,7 @@
 
   tasks:
     - import_tasks: init-setup.yml
-    # - import_tasks: cli-setup.yml
+    - import_tasks: cli-setup.yml
     - import_tasks: clickhouse-setup.yml
     # - import_tasks: python3-setup.yml
     # - import_tasks: python3-math-setup.yml
