--- a/ansible/python3-setup.yml
+++ b/ansible/python3-setup.yml
@@ -1,43 +1,43 @@
 ---
-- name: install pip3
-  apt: name=python3-pip state=present
+# - name: install pip3
+#   apt: name=python3-pip state=present
 
 - name: install pipenv
   pip: name=pipenv state=present
 
-- name: install flake8
-  pip: name=flake8 state=present
+# - name: install flake8
+#   pip: name=flake8 state=present
 
-- name: install yapf code formatter
-  pip: name=yapf state=present
+# - name: install yapf code formatter
+#   pip: name=yapf state=present
 
-- name: install httpie
-  pip: name=httpie state=present
+# - name: install httpie
+#   pip: name=httpie state=present
 
-- name: install http-prompt
-  pip: name=http_prompt state=present
+# - name: install http-prompt
+#   pip: name=http_prompt state=present
 
-- name: install stormssh
-  pip: name=stormssh state=present
+# - name: install stormssh
+#   pip: name=stormssh state=present
 
-- name: install ipython
-  pip: name=ipython state=present
+# - name: install ipython
+#   pip: name=ipython state=present
 
-- name: install sqlalchemy
-  pip: name=sqlalchemy state=present
+# - name: install sqlalchemy
+#   pip: name=sqlalchemy state=present
 
-- name: install pyarrow
-  pip: name=pyarrow state=present
+# - name: install pyarrow
+#   pip: name=pyarrow state=present
 
-- name: install snappy decompression
-  pip: name=python-snappy state=present
+# - name: install snappy decompression
+#   pip: name=python-snappy state=present
 
-- name: install snappy decompression
-  pip: name=python-snappy state=present
+# - name: install snappy decompression
+#   pip: name=python-snappy state=present
 
-- name: clickhouse client that supports a pure client and DB API
-  pip: name=clickhouse-driver state=present
+# - name: clickhouse client that supports a pure client and DB API
+#   pip: name=clickhouse-driver state=present
 
-- name: clickhouse sqlalchemy dialect
-  pip: name=sqlalchemy-clickhouse state=present
+# - name: clickhouse sqlalchemy dialect
+#   pip: name=sqlalchemy-clickhouse state=present
 
