--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -19,7 +19,8 @@
     - import_tasks: init-setup.yml
     - import_tasks: cli-setup.yml
     - import_tasks: clickhouse-setup.yml
-    # - import_tasks: python3-setup.yml
+    - import_tasks: python3-setup.yml
+    - import_tasks: minio-setup.yml
     # - import_tasks: python3-math-setup.yml
     # - import_tasks: docker-setup.yml
     # - import_tasks: docker-image-setup.yml
