--- a/ansible/minio-setup.yml
+++ b/ansible/minio-setup.yml
@@ -3,3 +3,13 @@
   apt:
     deb: https://dl.min.io/server/minio/release/linux-amd64/minio_20210805220119.0.0_amd64.deb
 
+# install minio client (mc) an S3 compatible client
+# https://docs.min.io/docs/minio-client-quickstart-guide.html
+- name: download minio client
+  get_url:
+    url: https://dl.min.io/client/mc/release/linux-amd64/mc
+    dest: /usr/local/bin/mc
+    mode: u=rwx,g=rx,o=rx
+  register: mc_download
+
+
