re-organize python clickhouse load data script

--- a/Pipfile
+++ b/Pipfile
@@ -12,8 +12,10 @@ yapf = "*"
 mypy = "*"
 pandas = "*"
 sqlalchemy = "*"
-sqlalchemy-clickhouse = "*"
+clickhouse-sqlalchemy = "*"
 awscli = "*"
+fire = "*"
+pytype = "*"
 
 [dev-packages]
 
