set some libraries as dev dependency

--- a/Pipfile
+++ b/Pipfile
@@ -4,36 +4,37 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-ipython = "7.32.0"
 dask = "*"
-pytest = "*"
 flake8 = "*"
-yapf = "*"
-mypy = "*"
 pandas = "*"
 sqlalchemy = "*"
 clickhouse-sqlalchemy = "*"
 awscli = "*"
 fire = "*"
-pytype = "*"
-jupyterlab = "*"
 clickhouse-driver = "*"
 polars = "*"
 duckdb = "*"
 typer = "*"
 seaborn = "*"
-pyarrow = "==7.0.0"
+pyarrow = "*"
 awswrangler = "*"
-black = "*"
 datafusion = "*"
-python-lsp-server = "*"
 numpy = "*"
-jupyter-console = "*"
 
 [dev-packages]
 pynvim = "*"
 jupyter-client = "*"
-ueberzug = "*"
+ipython = "*"
+pytest = "*"
+flake8 = "*"
+yapf = "*"
+mypy = "*"
+pytype = "*"
+jupyterlab = "*"
+black = "*"
+python-lsp-server = "*"
+jupyter-console = "*"
+pylint = "*"
 
 [requires]
 python_version = "3.8"
