update code with pyarrow dataset and feather examples

--- a/Pipfile
+++ b/Pipfile
@@ -4,40 +4,30 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-dask = "*"
-flake8 = "*"
-pandas = "*"
-sqlalchemy = "*"
-clickhouse-sqlalchemy = "*"
-awscli = "*"
+black = "*"
 fire = "*"
-clickhouse-driver = "*"
-polars = "*"
+flake8 = "*"
+mypy = "*"
+python-lsp-server = "*"
+pytype = "*"
+ipython = "*"
+pandas = "*"
+pyarrow = "==8.0.0"
 duckdb = "*"
-typer = "*"
-seaborn = "*"
-pyarrow = "*"
-awswrangler = "*"
+dask = "*"
 datafusion = "*"
-numpy = "*"
+polars = "*"
+awscli = "*"
+awswrangler = "*"
+sqlalchemy = "*"
+clickhouse-driver = "*"
+clickhouse-sqlalchemy = "*"
+jupyter-client = "*"
+jupyter-console = "*"
+jupyterlab = "*"
+seaborn = "*"
 
 [dev-packages]
-pynvim = "*"
-jupyter-client = "*"
-ipython = "*"
-pytest = "*"
-flake8 = "*"
-yapf = "*"
-mypy = "*"
-pytype = "*"
-jupyterlab = "*"
-black = "*"
-python-lsp-server = "*"
-jupyter-console = "*"
-pylint = "*"
 
 [requires]
-python_version = "3.8"
-
-[pipenv]
-allow_prereleases = true
+python_version = "3.10"
