update Python to version 3.10

--- a/Pipfile
+++ b/Pipfile
@@ -12,11 +12,10 @@ python-lsp-server = "*"
 pytype = "*"
 ipython = "*"
 pandas = "*"
-pyarrow = "*"
 duckdb = "*"
 dask = "*"
 datafusion = "*"
-polars = "*"
+'polars[pyarrow]' = "*"
 awscli = "*"
 awswrangler = "*"
 sqlalchemy = "*"
@@ -30,4 +29,4 @@ seaborn = "*"
 [dev-packages]
 
 [requires]
-python_version = "3.8"
+python_version = "3.10"
