--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,3 +40,10 @@ skip-string-normalization = true
 [tool.mypy]
 ignore_missing_imports = true
 check_untyped_defs = true
+
+[tool.pyright]
+include = ["python"]
+# exclude = ["**/.ipynb_checkpoints"]
+venvPath = "/home/gavin/.cache/pypoetry/virtualenvs"
+venv = "clickhouse-test-3tn46a-v-py3.10"
+verboseOutput = false
